Make updates per review.